@@ -1,3 +1,4 @@
+[2017-10-25 20:47:44 +0200]  Proxy dialog added and running. Needs testing with the requests lib..      karasu      {8651bcbc}
 [2017-10-25 09:48:01 +0200]  Proxy dialog is shown                                                      karasu      {beee873a}
 [2017-10-24 09:30:31 +0200]  Working on proxy dialog                                                    karasu      {0c507b68}
 [2017-10-23 20:38:00 +0200]  All proxy dialog logic needs to be added, yet                              karasu      {391e15fc}
